# introduction-to-data-science-project

./: .gitignore  README.md
src/: main.py
src/backend/: Dockerfile  app.py  data.json  fly.toml  hierarchy.json  main.py  pyproject.toml  regions.json  requirements.txt  utils.py
src/frontend/: fly.toml  package-lock.json  package.json
src/frontend/src/: App.css  App.jsx
src/frontend/src/components/: CardView.jsx  CheckboxLine.jsx  CheckboxView.jsx  Result.jsx  ResultView.jsx
